--- a/src/manifest.json
+++ b/src/manifest.json
@@ -144,94 +144,178 @@
 			},
 			"template": "{{Data}} -> {{Save}}",
 			"is_element": false,
-			"interface": "json_check_interface.js",
-			"select": "json_check_select.js",
+			"interface": "json_check_format_interface.js",
+			"select": "json_check_format_select.js",
 			"code": 
 			[
 				{
-					"file": "json_check_code.js", 
-					"name": "json_check_code"
+					"file": "json_check_format_code.js", 
+					"name": "json_check_format_code"
 				}
 			]
 		}
 	],
 	"localize": 
 	{
-		"See Full Documentation and Examples <a href=\"#\" onclick=\"BrowserAutomationStudio_OpenUrl('https://cheshirecaat.github.io/BAS.Modules/jpath-documentation-en.html'); return false;\"><span class=\"tr\">Here</span></a>":
+		"Consider an example. Suppose we got a line of the form <span style=\"color:black\">{\"age\":100, \"name\":\"John\", \"messages\": [\"m1\", \"m2\", \"m3\"]}</span> from a particular site. In a normal situation, we will have to write code to get, for example, the first message - <span style=\"color:black\">m1</span>. With JSONPath, we can simply specify the desired path - <span style=\"color:black\">$.messages[0]</span> and get what we needed as a result. If we briefly describe what exactly such a request means, we get the following: we take the root element using the <span style=\"color:black\">$</span> symbol, access the child element <span style=\"color:black\">messages</span> through the dot symbol, and indicate the index of the element we need.":
 		{
-			"ru":"Смотрите Полную Документацию и Примеры <a href=\"#\" onclick=\"BrowserAutomationStudio_OpenUrl('https://cheshirecaat.github.io/BAS.Modules/jpath-documentation-ru.html'); return false;\"><span class=\"tr\">Здесь</span></a>"
+			"ru":"Рассмотрим пример. Допустим, мы получили от определенного сайта строку вида <span style=\"color:black\">{\"age\":100, \"name\":\"John\", \"messages\": [\"m1\", \"m2\", \"m3\"]}</span>. В обычной ситуации, нам придётся писать код, чтобы получить, например, первое сообщение - <span style=\"color:black\">m1</span>. С помощью JSONPath мы можем просто указать нужный путь - <span style=\"color:black\">$.messages[0]</span> и получить в результате то, что нам было необходимо. Если кратко описать, что именно значит такой запрос, то получится следующее: берём корневой элемент с помощью символа <span style=\"color:black\">$</span>, обращаемся к дочернему элементу <span style=\"color:black\">messages</span> через символ точки, и указываем индекс нужного нам элемента."
 		},
-		"List of variable names separated by comma. Each variable will be set string or an array that matches JPath or simple JSON query and contain the value.":
+		"Please note, if you use the path <span style=\"color:black\">$.messages[*]</span> - the output will be a list of values, but the actions <span style=\"color:black\">Get Value</span> or <span style=\"color:black\">Get Key</span> will return only the first element from the list,i.e. <span style=\"color:black\">m1</span>, not <span style=\"color:black\">[m1, m2, m3]</span>. If you need a list, use the <span style=\"color:black\">Get all values</span> or <span style=\"color:black\">Get all keys</span> actions.":
 		{
-			"ru":"Список имен переменных, разделенных запятой. Каждая переменная будет равна строке или массиву, которые соответствуют JPath запросу или стаднартному парсингу JSON и содержат значение."
+			"ru":"Обратите внимание, если использовать путь <span style=\"color:black\">$.messages[*]</span> - на выходе получится список значений, но действия <span style=\"color:black\">Получить значение</span> или <span style=\"color:black\">Получить ключ</span> вернут только первый элемент из списка, т.е <span style=\"color:black\">m1</span>, а не <span style=\"color:black\">[m1, m2, m3]</span>. Если вам нужен именно список, используйте действия <span style=\"color:black\">Получить все значения</span> или <span style=\"color:black\">Получить все ключи</span>."
 		},
-		"List of variable names separated by comma. Each variable will be set string or an array that matches JPath or simple JSON query and contain the key.":
+		"In a similar way, we can do the inverse transformation, i.e. make a JSON format string from the object. For example, we have an object with two parameters. One of them is an array of three numbers, the other is a simple string. Let it be student performance data for the subject. After converting, we can get a JSON string of the form like <span style=\"color:black\">{\"name\":\"John\",\"grades\":[5,5,4]}</span>":
 		{
-			"ru":"Список имен переменных, разделенных запятой. Каждая переменная будет равна строке или массиву, которые соответствуют JPath запросу или стаднартному парсингу JSON и содержат ключ."
+			"ru":"Подобным образом мы можем сделать и обратное преобразование, т.е. сделать из объекта строку в формате JSON. Например, у нас есть объект с двумя параметрами. Один из них - это массив из трёх чисел, другой - это обычная строка. Пусть это будет информация об успеваемости студента за предмет. После преобразования, мы получим JSON строку подобного вида - <span style=\"color:black\">{\"name\":\"John\",\"grades\":[5,5,4]}</span>"
 		},
-		"This variable will be set string or an array that matches JPath or simple JSON query and contain the value.":
+		"Remember that this function is required for a simple conversion. You can use other actions with both the object and the string. It is recommended that you use the <span style=\"color:black\">Get value</span> or <span style=\"color:black\">Get all values</span> ​​actions if you want to get specific information about an object or JSON string.":
 		{
-			"ru":"Эта переменная будет равна строке или массиву, которые соответствуют JPath запросу или стаднартному парсингу JSON и содержат значение."
+			"ru":"Помните, что данная функция используется для простого преобразования. Вы можете использовать другие действия как с объектом, так и со строкой. Но всё же рекомендутся сразу обращаться к функциям <span style=\"color:black\">Получить значение</span> или <span style=\"color:black\">Получить все значения</span>, если вы хотите собрать особую информацию об объекте или строке в формате JSON."
 		},
-		"This variable will be set string or an array that matches JPath or simple JSON query and contain the key.":
+		"JSON is a text format for data exchange, serialization (storage) of objects, arrays, numbers, strings, logical values ​​and <span style=\"color:black\">null</span> values. It is based on JavaScript syntax, but still different from it: not every JavaScript code is JSON, and not every JSON is JavaScript code.":
 		{
-			"ru":"Эта переменная будет равна строке или массиву, которые соответствуют JPath запросу или стаднартному парсингу JSON и содержат ключ."
-		},		
-		"This variable will be true or false depending on whether the string is a valid JSON string.":
-		{
-			"ru":"Эта переменная будет иметь значение true или false в зависимости от того, является ли строка допустимой строкой JSON."
+			"ru":"JSON - текстовый формат обмена данными, сериализации (хранения) объектов, массивов, чисел, строк, логических значений и значения <span style=\"color:black\">null</span>. Он основывается на синтаксисе JavaScript, однако всё же отличается от него: не каждый код на JavaScript является JSON, и не каждый JSON является кодом на JavaScript."
 		},
-		"This variable will be set to number of elements matching JPath or simple JSON query.":
+		"For example, checking for the string <span style=\"color:black\">{\"name\":\"John\"}</span> will return <span style=\"color:black\">true</span>, because it has a valid JSON format. The string <span style=\"color:black\">\"name\":\"John\"</span> will have an incorrect structure, it does not have curly braces, so the result will be <span style=\"color:black\">false</span>.":
 		{
-			"ru":"Эта переменная будет равна количеству элементов, соответствующих JPath запросу или стаднартному парсингу JSON."
+			"ru":"Например, проверка для строки <span style=\"color:black\">{\"name\":\"John\"}</span> вернет <span style=\"color:black\">true</span>, т.к. она имеет валидный формат JSON. Строка <span style=\"color:black\">\"name\":\"John\"</span> будет имеет неверную структуру, у неё отсутствуют фигурные скобки, поэтому результатом будет <span style=\"color:black\">false</span>."
 		},
-		"Text, target of JPath or simple JSON query. You can put string in JSON format here.":
+		"For example, changing format of the string <span style=\"color:black\">{\"name\":\"John\"}</span> will return object that contains one property - <span style=\"color:black\">name</span> with value <span style=\"color:black\">John</span>":
 		{
-			"ru":"Текст, к которому будет применяться JPath запрос или стандартный парсинг JSON. В это поле вы можете поместить строку в JSON формате."
+			"ru":"Например, при изменении формата строки вида <span style=\"color:black\">{\"name\":\"John\"}</span> будет возвращён объект, содеражий одно свойство - <span style=\"color:black\">name</span> со значением <span style=\"color:black\">John</span>"
 		},
-		"JPath query. Can be empty.":
+		"You can use simple parameter names to get the value you need. For example, having the line from the previous example, you can specify a query of the form <span style=\"color:black\">age</span> as a path and get the value of this property - <span style=\"color:black\">100</span>.":
 		{
-			"ru":"JPath запрос. Может быть пустым."
+			"ru":"Вы можете использовать простые названия параметров, чтобы получить необходимое значение. Например, имея строку из предыдущего примера вы можете указать в качестве пути запрос вида <span style=\"color:black\">age</span> и получить значение этого свойства - <span style=\"color:black\">100</span>."
 		},
-		"JSON string or object to parse": 
+		"Typical examples of using this function are working with the API of a website or, more often in the context of BAS, working with Cookies. In BAS, cookies are presented to the user in JSON format strings. This often causes difficulties. But with JSONPath, you can easily get the data you need.":
 		{
-			"ru":"JSON строка или объект для парсинга"
+			"ru":"Типичные примеры применения данной функции - это работа с API какого-либо веб-сайта или, что бывает чаще в контексте BAS, работа с Cookies. В BAS куки представлены для пользователя в формате JSON строки. Это зачастую вызывает трудности. Но с помощью JSONPath, вы с лёгкостью сможете достать нужные данные."
 		},
-		"JPath query to parse": 
+		"See full documentation and examples <a href=\"#\" onclick=\"BrowserAutomationStudio_OpenUrl('https://cheshirecaat.github.io/BAS.Modules/jpath-documentation-en.html'); return false;\"><span class=\"tr\">here.</span></a>":
 		{
-			"ru":"JPath запрос для парсинга"
+			"ru":"Смотрите полную документацию и примеры <a href=\"#\" onclick=\"BrowserAutomationStudio_OpenUrl('https://cheshirecaat.github.io/BAS.Modules/jpath-documentation-ru.html'); return false;\"><span class=\"tr\">здесь.</span></a>"
 		},
-		"Variable to save":
+		"Please note that if you specify as a variable for checking not a string, but a variable of any other type - the result will always be <span style=\"color:black\">false</span>.":
 		{
-			"ru":"Переменная, в которую сохранить результат"
+			"ru":"Обратите внимание, если вы укажете в качестве переменной для проверки не строку, а переменную любого другого типа - результатом всегда будет <span style=\"color:black\">false</span>."
+		},
+		"JSONPath (JPath) is a powerful tool for working with the JSON data type. It is built on the basis of logic, which is very similar to XPath, but has some limitations, because the data type itself is much simpler than Xml.":
+		{
+			"ru":"JSONPath (JPath) - мощный инструмент для работы с типом данных JSON. Он построен на основе логики, которая очень похожа на XPath, но имеет некоторые ограничения, т.к. сам тип данных намного проще Xml."
+		},
+		"Using this technology, we can quickly get data from JavaScript objects or strings in JSON format. In addition, this greatly simplifies the work, as usually, parsing JSON requires writing code.":
+		{
+			"ru":"С помощью данной технологии, мы можем быстро получать данные из JavaScript объектов или строк в формате JSON. Кроме того, это сильно упрощает работу, т.к. обычно, чтобы распарсить JSON, требуется писать код."
+		},
+		"JSON string or object to format changing. You can specify a valid JSON string here or an object whose type is not simple. Simple types include numbers, boolean values, null value":
+		{
+			"ru":"JSON строка или объект изменения формата. Вы можете указать здесь валидную JSON строку либо объект, тип которого не является простым. К простым типам относятся числа, булевы значения, значение null."
+		},
+		"JSON string or object to parse. You can specify a valid JSON string here or an object whose type is not simple. Simple types include numbers, boolean values, null value.":
+		{
+			"ru":"JSON строка или объект для парсинга. Вы можете указать здесь валидную JSON строку либо объект, тип которого не является простым. К простым типам относятся числа, булевы значения, значение null."
+		},
+		"With this action, you can see if you can use the string to parse JSON and retrieve data to avoid possible errors.":
+		{
+			"ru":"С помощью этого действия вы можете убедиться, можно ли использовать строку для парсинга JSON и получения данных, чтобы избежать возможных ошибок."
+		},
+		"With this action, you can convert a JSON string to a JavaScript object and vice versa.":
+		{
+			"ru":"С помощью этого действия вы можете преобразовать строку в формате JSON в объект JavaScript и наоборот."
+		},
+		"JSONPath query should not be empty. If you want to change the data format, use the 'Change format' action.":
+		{
+			"ru":"JSONPath запрос не должен быть пустым. Если вы хотите изменить формат данных, испольуйте действие 'Изменить формат'."
+		},
+		"If the result of the action is a single value, a list containing this value will be returned.":
+		{
+			"ru":"Если результатом действия будет одно значение, будет возвращён список, содержащий это значение."
+		},
+		"If the result of the action is a single key, a list containing this key will be returned.":
+		{
+			"ru":"Если результатом действия будет один ключ, будет возвращён список, содержащий этот ключ."
+		},
+		"If an error occurs during parsing, an empty string will be returned.":
+		{
+			"ru":"Если во время парсинга произойдёт ошибка, будет возвращена пустая строка."
+		},
+		"Check that selected variable is valid JSON string and return the result to a variable.":
+		{
+			"ru":"Проверить, что выбранная переменная является допустимой строкой JSON и сохранить результат в переменную."
+		},	
+		"New data format for your variable. You can use only two options - String or JSON.":
+		{
+			"ru":"Новый формат данных для вашей переменной. Вы можете использовать только два варианта - String или JSON."
+		},
+		"Variable that stores the result of parsing (All values ​​or an list of one value).":
+		{
+			"ru":"Переменная, содержащая результат парсинга (Все значения или список, состоящий из одного значения)."
+		},
+		"Variable that stores the result of parsing (All keys ​​or an list of one key).":
+		{
+			"ru":"Переменная, содержащая результат парсинга (Все ключи или список, состоящий из одного ключа)."
+		},
+		"Variable that stores the result of format changing (object or string).":
+		{
+			"ru":"Переменная, содержащая результат изменения формата (объект или строка)."
+		},
+		"Variable that stores the result of format checking (true or false).":
+		{
+			"ru":"Переменная, содержащая результат проверки формата (true или false)."
+		},
+		"Variable that stores the result of parsing (First value only).":
+		{
+			"ru":"Переменная, содержащая результат парсинга (Первое подходящее значение)."
+		},
+		"Variable that stores the result of parsing (First key only).":
+		{
+			"ru":"Переменная, содержащая результат парсинга (Первый подходящий ключ)."
 		},
 		"Execute JPath query if needeed and get elements count.":
 		{
 			"ru":"Выполнить запрос JPath, если необходимо, и получить количество элементов."
 		},
-		"Execute JPath query if needeed and get all values.":
+		"Execute JPath query and get all matching values.":
 		{
-			"ru":"Выполнить запрос JPath, если необходимо, и получить все значения."
+			"ru":"Выполнить запрос JPath и получить все подходящие значения."
 		},
-		"Execute JPath query if needeed and get one value.":
+		"Execute JPath query and get one value (first matching).":
 		{
-			"ru":"Выполнить запрос JPath, если необходимо, и получить одно значение."
+			"ru":"Выполнить запрос JPath и получить одно значение (первое подходящее)."
 		},
-		"Execute JPath query if needeed and get all keys.":
+		"Execute JPath query and get all matching keys.":
 		{
-			"ru":"Выполнить запрос JPath, если необходимо, и получить все ключи."
+			"ru":"Выполнить запрос JPath и получить все подходящие ключи."
 		},
-		"Execute JPath query if needeed and get one key.":
+		"Execute JPath query and get one key (first matching).":
 		{
-			"ru":"Выполнить запрос JPath, если необходимо, и получить один ключ."
+			"ru":"Выполнить запрос JPath и получить один ключ (первый подходящий)."
 		},
-		"Check that selected variable is valid JSON string.":
+		"JSON string or object to change": 
 		{
-			"ru":"Проверить, что выбранная переменная является допустимой строкой JSON."
+			"ru":"JSON строка или объект для изменения"
 		},
-		"Format":
+		"JSON string or object to parse": 
 		{
-			"ru":"Формат"
+			"ru":"JSON строка или объект для парсинга"
+		},
+		"String variable to check":
+		{
+			"ru":"Строковая переменная для проверки"
+		},
+		"JSONPath query to parse": 
+		{
+			"ru":"JSONPath запрос для парсинга"
+		},
+		"Variable to save":
+		{
+			"ru":"Переменная, в которую сохранить результат"
+		},
+		"New data format":
+		{
+			"ru":"Новый формат данных"
 		}
 	},
 	"engine": 
